# vio

./: .gitignore  PLAN.md  PROGRESS.md  README.md  RUST_CANVAS_PLAN.md  SKILL.md  melos.yaml  pubspec.yaml
.github/: copilot-instructions.md
apps/client/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  pubspec_overrides.yaml  test_math.dart
apps/client/config/: dev.json  production.json  staging.json
apps/client/integration_test/: simple_test.dart
apps/client/lib/: main.dart
apps/client/rust/: Cargo.toml
apps/client/rust/benches/: scene_bench.rs
apps/client/rust/src/: frb_generated.rs  lib.rs
apps/client/rust/src/api/: engine.rs
apps/client/rust/src/math/: aabb.rs  matrix2d.rs  mod.rs
apps/client/rust/src/rasterizer/: mod.rs  painter.rs  tiles.rs
apps/client/rust/src/render/: commands.rs  culling.rs  generate.rs  mod.rs
apps/client/rust/src/scene_graph/: mod.rs  shape.rs  spatial_index.rs  tree.rs
apps/client/rust_builder/: pubspec.yaml
apps/client/test/: proto_converter_fill_test.dart  shape_factory_test.dart  token_storage_test.dart  widget_test.dart
apps/client/tool/: build_wasm.sh  (+1 more)
backend/: .env.example  README.md  biome.json  buf.gen.backend.yaml  docker-compose.yml  drizzle.config.ts  package.json  tsconfig.json
backend/drizzle/: 0000_unusual_franklin_storm.sql  0001_absent_namorita.sql
backend/logs/: perf-diagnostics.jsonl
backend/scripts/: dev-preflight.sh  dev-preflight.ts
backend/src/: debug-snapshots.ts  index.ts  vio.binpb
macos/Runner.xcodeproj/: project.pbxproj
scripts/: proto-generate.ts
(+188 files in other folders)
