[package]
name = "rust_lib_vio_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rstar = "0.12"
euclid = "0.22"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
approx = "0.5"

[[bench]]
name = "scene_bench"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
